[metadata]
name = rizval
version = 0.0.1
author = Rizwan Mustafa
author_email = rizwanmustafa0000@gmail.com
description = A data validation library inspired by JOI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rizwanmustafa/rizval
project_urls =
    Bug Tracker = https://github.com/rizwanmustafa/rizval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
    # = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .